@startuml

title __REMOTECOMPILER's Class Diagram__\n

  namespace com.example.remoteCompiler {
    class com.example.remoteCompiler.DisplayErrorsActivity {
        ~ dirPath : String
        ~ executePostReq : AsyncTask<Integer, Void, Void>
        ~ filePaths : ArrayList<String>
        ~ flags : String
        ~ mainFile : String
        ~ prevIntent : Intent
        # onActivityResult()
        # onCreate()
        - addItemsToDisplay()
        - createFixIntent()
        - decodeRes()
        - displayErrorButtons()
        - encodeAllFiles()
        - encodeB64File()
        - fileNamesToString()
        - parseErrors()
        - sendPostRequest()
        - startPostReqProcess()
    }
  }
  

  namespace com.example.remoteCompiler {
    class com.example.remoteCompiler.ErrorsData {
        + Errors : String
        + Ok : boolean
        + getCompiled()
        + getErrorsList()
        ~ ErrorsData()
    }
  }
  

  namespace com.example.remoteCompiler {
    class com.example.remoteCompiler.FixErrorsActivity {
        ~ cursorLine : int
        ~ et : EditText
        ~ fileName : String
        ~ filePath : String
        ~ intent : Intent
        # onCreate()
        - findFilePath()
        - tryAgain()
        - updateFile()
    }
  }
  

  namespace com.example.remoteCompiler {
    class com.example.remoteCompiler.MainActivity {
        ~ ACT_2_REQUEST : int
        ~ choicesList : List<String>
        ~ chooseMainBtn : Button
        ~ chosenFileNames : String[]
        ~ dirTV : TextView
        ~ errorListBtn : Button
        ~ filePaths : ArrayList<String>
        ~ flags : String
        ~ mainFileName : String
        ~ mainTV : TextView
        ~ selectedItems : HashMap<String, Integer>
        + onActivityResult()
        # onCreate()
        - displayFlagOptions()
        - displayMainPicker()
        - openActivityDispErr()
        - setChosenFileNames()
        - startFilePicker()
    }
  }
  

  com.example.remoteCompiler.DisplayErrorsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.remoteCompiler.FixErrorsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.remoteCompiler.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
